# utmd

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  release.sh
scripts/: release.sh  verify.sh
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs  naming.rs  output.rs  state.rs  utm.rs
src/commands/: clone.rs  delete_all.rs  init.rs  lifecycle.rs  mod.rs  spawn.rs
tests/: integration_cli.rs
