[package]
name = "utmd"
version = "0.1.2"
edition = "2024"
rust-version = "1.95"
authors = ["tappunk"]
description = "Minimalist developer sandbox and disposable VM manager for UTM on macOS."
repository = "https://github.com/tappunk/utmd"
license = "MIT"
readme = "README.md"
keywords = ["utm", "sandbox", "vm", "automation", "macos"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
tokio = { version = "1.52", features = ["full"] }
md-5 = "0.10"
color-eyre = "0.6"
which = "6.0"

