[package]
name = "utmd"
version = "0.1.11"
edition = "2024"
rust-version = "1.95"
authors = ["tappunk"]
description = "Minimalist developer sandbox and disposable VMs for UTM on macOS."
repository = "https://github.com/tappunk/utmd"
license = "MIT"
readme = "README.md"
keywords = ["utm", "sandbox", "vm", "automation", "macos"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
color-eyre = "0.6"
eyre = "0.6"
which = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
rand = "0.9"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
